@startuml GetRecipeCommentClassDiagram
!include doc/SDS/CommonClassDiagram/PaginateData.plantuml
!include doc/SDS/CommonClassDiagram/ResultAndError.plantuml
!include doc/SDS/CommonClassDiagram/Recipe/RecipeDbContext.plantuml
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
hide circle

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class RecipeController {
    +GetRecipeBookmarks([FromBody] GetRecipeBookmarkDTO getRecipeBookmarkDTO): async Task<IActionResult>
}

class GetRecipeBookmarksQuery {
    +AccountId: Guid
    +Skip: int
}

class GetRecipeBookmarksQueryHandler {
    -_context: IApplicationDbContext
    -_mapper: IMapper
    -_grpcUserClient: GrpcUserClient
    -_paginateDataUtility: IPaginateDataUtility
    +Handle(GetRecipeBookmarksQuery request, CancellationToken cancellationToken): async Task<Result<PaginatedRecipeFeedsListResponse?>> 
}


interface IMapper{
    #Map<TDestination>(object source): TDestination
}

class PaginatedRecipeFeedsListResponse{
}
class BasePaginatedResponse{
    +PaginatedData : IEnumerable<Type>
    +Metadata: MetadataType?
}
PaginatedRecipeFeedsListResponse --|> BasePaginatedResponse

class GetRecipeBookmarkDTO{
    +Skip: int
}

class RecipeError {
    {static} +NotFound: Error
    {static} +AddRecipeFail: Error
    {static} +DeleteRecipeFail: Error
    {static} +UpdateRecipeFail: Error
}
together {
    class GrpcGetSimpleUsersRequest #DarkBlue;line:white;text:white
    class GrpcUserClient #DarkBlue;line:white;text:white
}

RecipeController --|> BaseApiController
RecipeController "1"--"1" GetRecipeBookmarkDTO
RecipeController "1"--"1" GetRecipeBookmarksQuery

GetRecipeBookmarksQueryHandler "1"--"1" GetRecipeBookmarksQuery
GetRecipeBookmarksQueryHandler "1"--"1" Result
GetRecipeBookmarksQueryHandler "1"--"1" PaginatedRecipeFeedsListResponse
GetRecipeBookmarksQueryHandler "1"--"1" GrpcGetSimpleUsersRequest
GetRecipeBookmarksQueryHandler "1" o-- "1" IApplicationDbContext
GetRecipeBookmarksQueryHandler "1" o-- "1" IMapper
GetRecipeBookmarksQueryHandler "1" o-- "1" IPaginateDataUtility
GetRecipeBookmarksQueryHandler "1" o-- "1" GrpcUserClient
GetRecipeBookmarksQueryHandler "1"--"1..*" RecipeError

Error "1" --"1..*" RecipeError
@enduml